--- a/src/components/css/Dashboard.css
+++ b/src/components/css/Dashboard.css
@@ -5,14 +5,40 @@
     position: absolute;
 }
 
-
+.btn-open-sidebar {
+    position: fixed;
+    z-index: 99;
+    width: 2rem;
+    height: 2rem;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5rem;
+    color:#000;
+    background-color: #f5f5f5;
+    top: 3rem;
+    border-radius: 10px;
+    animation: open-sidebar .5s ease-in-out;
+}
+.btn-open-sidebar:hover {cursor: pointer;}
+@keyframes open-sidebar {
+    from {
+        opacity: 0;
+        transform: translateX(-100%);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
 
 /* dash sidebar */
 .dash-sidebar {
-    width: 20%;
+    width: 25%;
     height: 100%;
     background-color: rgb(21, 179, 47);
     overflow-y: scroll;
+    transition: all 200ms ease-in-out;
 }
 .dash-logo {
     padding: 1rem;
@@ -25,20 +51,20 @@
 }
 
 .dash-tool-container > h4 {
-    padding: 1rem;
-    font-size: 1.1rem;
+    padding: .75rem;
+    /* font-size: 1.1rem; */
 }
 
 
 
 .dash-tool-items {
     margin: auto 1rem;
-    font-size: 1.05rem;
+    /* font-size: 1.05rem; */
     margin-bottom: 1rem;
     height: 2.7rem;
     /* background-color: #f1f1f1; */
     display: flex;
-    padding-left: 1rem;
+    padding-left: 1.25rem;
     justify-content: flex-start;
     align-items: center;
     transition: all 200ms ease-in-out;
@@ -51,15 +77,211 @@
     cursor: pointer;
 }
 
+.btnDash-active {
+    position: relative;
+}
+.btnDash-active::before {
+    position: absolute;
+    left: 0;
+    width: 10px;
+    height: 100%;
+    content: '';
+    border-radius: 5px;
+    background-color: #f5f5f5;
+    transition: all 200ms ease-in-out;
+}
+
+
+.close-sidebar {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    font-size: 1.5rem;
+    height: 2rem;
+    padding-right: .5rem;
+}
+.close-sidebar > div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 200ms ease-in-out;
+}
+.close-sidebar > div:hover{
+    cursor: pointer;
+    color: #f5f5f5;
+}
 /* dash sidebar */
 
 
 
 /* dash content */
 
+
 .dash-content {
-    width: 80%;
+    width: 100%;
     height: 100%;
+    overflow-y: scroll;
 }
 
+.dash-header {
+    position: relative;
+    background-color: red;
+    width: 100%;
+    height: 3rem;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 1%;
+    perspective: 99px;
+    position: sticky;
+    top: 0;
+    z-index: 9999;
+}
+#dash-header-title {
+    /* font-size: 1.5rem; */
+}
+#dash-header-mobile > h2 {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#dash-header-mobile {
+    position: relative;
+    height: 100%;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    /* font-size: 2rem; */
+    animation: spin 500ms ease-in-out;
+}
+#dash-header-mobile:hover {
+    cursor: pointer;
+}
+
+@keyframes spin {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+/* 480 */
+@media screen and (max-width:880px) {
+
+    .btn-open-sidebar {
+        display: none;
+    }
+    
+    .dash-sidebar {
+        display: none;
+    }
+
+    .dash-content {
+        width: 100%;
+    }
+
+    #dash-header-mobile {
+        display: flex;
+    }
+
+    #dash-header-title {
+        display: none;
+    }
+}
+
+.close-mobile {
+    width: 100%;
+    text-align: right;
+    padding-right: 1rem;
+    padding-top: 1rem;
+    /* font-size: 1.5rem; */
+    
+}
+.close-mobile:hover {
+    cursor: pointer;
+}
+.mobile-item-container {
+    background-color: rgb(201, 144, 255);
+    top: 100%;
+    position: absolute;
+    width: 100%;
+    left: 0;
+    display: none;
+    animation: hamsAppear 500ms ease-in-out;
+    justify-content: center;
+    align-items: center;
+    
+    flex-direction: column;
+}
+.item-mobile-container > h4 {
+    margin-top: 0;
+    margin-bottom: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+.item-mobile-container > h4::after{
+    position: absolute;
+    content: '';
+    background-color: brown;
+    border-radius: 5px;
+    height: 10%;
+    width: 100%;
+    top: 100%;
+}
+.items-mobile-items {
+   
+    margin-bottom: 1rem;
+    /* font-size: 1rem; */
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+    
+}
+.items-mobile-items:hover {
+    cursor: pointer;
+}
+.items-mobile-items:after {
+    height: .2rem;
+    top: 100%;
+    left: 0;
+    content: '';
+    background-color: rgb(194, 112, 112);
+    position: absolute;
+    width: 0%;
+    z-index: 99;
+    transition: all 300ms ease-in-out;
+}
+.items-mobile-items:hover:after {
+    
+    width: 100%;
+}
+
+
+@keyframes hamsAppear {
+    from {
+        opacity: 0;
+        transform: translateX(-100%);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+/* @media screen and (min-width:881px) {
+    .mobile-item-container {
+        display: none;
+    }
+}  */
+
+
+.dash-body {
+    position: relative;
+    height: 100%;
+}
 /* dash content */
