--- a/src/components/css/Dashboard.css
+++ b/src/components/css/Dashboard.css
@@ -14,13 +14,30 @@
     justify-content: center;
     align-items: center;
     font-size: 1.5rem;
-    color:#000;
-    background-color: #f5f5f5;
+    color:var(--colorDark1);
+    background-color: var(--colorFont);
     top: 3rem;
-    border-radius: 10px;
+    border-radius: 6px;
     animation: open-sidebar .5s ease-in-out;
 }
-.btn-open-sidebar:hover {cursor: pointer;}
+.btn-night-mode {
+    position: fixed;
+    z-index: 99;
+    right: 1rem;
+    bottom: 1rem;
+    width: 2rem;
+    height: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* border: 1px solid red; */
+    font-size: 1.3rem;
+    background-color: #d04545;
+    border-radius: 6px;
+    transition: all 300ms ease-in-out;
+}
+
+.btn-open-sidebar:hover, .btn-night-mode {cursor: pointer;}
 @keyframes open-sidebar {
     from {
         opacity: 0;
@@ -32,17 +49,18 @@
     }
 }
 
+
 /* dash sidebar */
 .dash-sidebar {
     width: 25%;
     height: 100%;
-    background-color: rgb(21, 179, 47);
+    background-color: var(--colorDark2);
     overflow-y: scroll;
     transition: all 200ms ease-in-out;
 }
 .dash-logo {
     padding: 1rem;
-    border-bottom: 1px solid;
+    border-bottom: 1px solid var(--colorFont);
 }
 .dash-logo > h1 {
     width: 100%;
@@ -53,11 +71,13 @@
 .dash-tool-container > h4 {
     padding: .75rem;
     /* font-size: 1.1rem; */
+    color: var(--colorFont);
 }
 
 
 
 .dash-tool-items {
+    
     margin: auto 1rem;
     /* font-size: 1.05rem; */
     margin-bottom: 1rem;
@@ -69,11 +89,12 @@
     align-items: center;
     transition: all 200ms ease-in-out;
     border-radius: 5px;
+    color: var(--colorFont);
 }
 
 .dash-tool-items:hover {
-    background-color: #f5f5f5;
-    color: #000;
+    background-color: var(--colorFont);
+    color: var(--colorDark1);
     cursor: pointer;
 }
 
@@ -87,7 +108,7 @@
     height: 100%;
     content: '';
     border-radius: 5px;
-    background-color: #f5f5f5;
+    background-color: var(--colorFont);
     transition: all 200ms ease-in-out;
 }
 
@@ -102,6 +123,7 @@
     padding-right: .5rem;
 }
 .close-sidebar > div {
+    color: var(--colorFont);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -109,7 +131,7 @@
 }
 .close-sidebar > div:hover{
     cursor: pointer;
-    color: #f5f5f5;
+    
 }
 /* dash sidebar */
 
@@ -126,7 +148,7 @@
 
 .dash-header {
     position: relative;
-    background-color: red;
+    background-color: var(--colorDark1);
     width: 100%;
     height: 3rem;
     display: flex;
@@ -140,9 +162,11 @@
 }
 #dash-header-title {
     /* font-size: 1.5rem; */
+    color: var(--colorFont);
 }
 #dash-header-mobile > h2 {
-    height: 100%;
+    
+    height: 100%;   
     display: flex;
     align-items: center;
     justify-content: center;
