--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,8 @@
   --colorDark13: #161b22;
   --colorDark23: #30363d;
   --colorDark33: #0d1117;
+
+  --shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 * {
