--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,8 @@
   --colorDark23: #30363d;
   --colorDark33: #0d1117;
 
+  --colorSuccess:#28a745;
+  --colorDanger: #dc3545;
   --shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
