--- a/src/components/css/Dashboard.css
+++ b/src/components/css/Dashboard.css
@@ -145,6 +145,7 @@
     width: 100%;
     height: 100%;
     overflow-y: scroll;
+    background-color: var(--colorDark3);
 }
 
 .dash-header {
@@ -212,6 +213,7 @@
 
     #dash-header-mobile {
         display: flex;
+        padding-left: .65rem;
     }
 
     #dash-header-title {
