--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@
   --colorInfo:#007bff;
   --colorWarning: #ffc107;
   --shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  --showdowSmall: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 * {
