--- a/src/components/css/Dashboard.css
+++ b/src/components/css/Dashboard.css
@@ -58,10 +58,24 @@
     background-color: var(--colorDark2);
     overflow-y: scroll;
     transition: all 200ms ease-in-out;
+
 }
 .dash-logo {
-    padding: 1rem;
+    padding: .5rem;
     border-bottom: 1px solid var(--colorFont);
+    /* height: 10rem; */
+    position: relative;
+}
+.dash-logo > div {
+    height: 8.5rem;
+}
+.dash-logo > div > img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+.dash-logo > div > img:hover {
+    cursor: pointer;
 }
 .dash-logo > h1 {
     width: 100%;
